[project]
name = "cvapplication"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "DawnMagnet", email = "axccjqh@qq.com" }
]
dependencies = [
    "altair",
    "pandas",
    "streamlit",
    "opencv-contrib-python~=4.10.0.82",
    "numba~=0.60.0",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cvapplication"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
cvapplication = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
